--- a/unicorecmsffl/static/css/style.css
+++ b/unicorecmsffl/static/css/style.css
@@ -4,7 +4,7 @@
 
 /*  GLOBAL  */
 
-    html, body { margin: 0; padding: 0; color: #666; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; -webkit-text-size-adjust: none; }
+    html, body { margin: 0; padding: 0; color: #666; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; line-height: 1.3em; -webkit-text-size-adjust: none; }
     input, select, textarea { font-size: 95%; font-family: Arial, Helvetica, sans-serif; }
     a { color: #009aef; text-decoration: none; }
     .clear { width: 100%; height: 0px; clear: both; display: block; }
@@ -33,7 +33,7 @@
 /*  CONTENT  */
 
     #content {}
-        #content .h1 { background: #cce9fc; border-top: 1px dotted #fff; font-weight: bold; color: #0093ef; vertical-align: middle; line-height: 44px }
+        #content .h1 { background: #cce9fc; border-top: 1px dotted #fff; font-weight: bold; color: #0093ef; vertical-align: middle; line-height: 30px }
         #content .h1 img { float: left; padding: 0 10px 0 0; }
         #content .h1 a { display: block; }
         #content .h2 { padding: 10px; background: #cce9fc; font-weight: bold; color: #0093ef; border-top: 1px dotted #0093ef; }
