ensure links are spaced correctly

--- a/unicorecmsffl/static/css/style.css
+++ b/unicorecmsffl/static/css/style.css
@@ -33,7 +33,7 @@
 /*  CONTENT  */
 
     #content {}
-        #content .h1 { background: #cce9fc; border-top: 1px dotted #fff; font-weight: bold; color: #0093ef; vertical-align: middle; line-height: 30px }
+        #content .h1 { padding: 10px; background: #cce9fc; font-weight: bold; color: #0093ef; border-top: 1px dotted #fff; vertical-align: middle;}
         #content .h1 img { float: left; padding: 0 10px 0 0; }
         #content .h1 a { display: block; }
         #content .h2 { padding: 10px; background: #cce9fc; font-weight: bold; color: #0093ef; border-top: 1px dotted #0093ef; }
