--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -13,7 +13,7 @@
 
 /*  LANG  */
 
-    .lang { padding: 5px 16px; text-align: right}
+    .lang { padding: 5px 16px; text-align: right; background: #EBEBEB;}
 
 /*  HEADER  */
 
