--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -46,6 +46,7 @@
 
         .home-content .title {text-transform: uppercase; font-weight: bold;display: block;}
         .home-content img {float: left; margin: 5px 10px 10px 0; }
+        [dir='rtl'] .home-content img {float: right; margin: 5px 0 10px 10px; }
         .home-content p {margin-top: 0;}
         .home-content .item {border-top: solid 2px #e4e4e4; padding: 20px;}
 
