--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -14,7 +14,7 @@
 /*  LANG  */
 
     .lang { padding: 5px 16px; text-align: right; background: #EBEBEB;}
-
+    [dir='rtl'] .lang {text-align: left; }
 /*  HEADER  */
 
     #header { padding: 10px; background: #fff; text-align: center; border-bottom: 2px solid #e9e9e9; }
