--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -13,8 +13,36 @@
 
 /*  LANG  */
 
-    .lang { padding: 5px 16px; text-align: right; background: #EBEBEB;}
-    [dir='rtl'] .lang {text-align: left; }
+    .lang {
+        padding: 5px 16px;
+        text-align: right;
+        background: #EBEBEB;
+        color: #bbb;
+    }
+    
+    [dir='rtl'] .lang {
+        text-align: left;
+    }
+
+    .lang-more-rtl {
+        display: none;
+    }
+
+    [dir='rtl'] .lang-more-rtl {
+        display: inline;
+    }
+
+    [dir='rtl'] .lang-more-lrt {
+        display: none;
+    }
+
+    .lang .active {
+        color: #999;
+    }
+
+
+
+
 /*  HEADER  */
 
     #header { padding: 10px; background: #fff; text-align: center; border-bottom: 2px solid #e9e9e9; }
