--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -36,8 +36,8 @@
 
 /*  HEADER  */
 
-    #header { padding: 10px; background: #fff; text-align: center; border-bottom: 2px solid #e9e9e9; }
-        #header img { display: block; margin: 0 auto }
+    #logo-container { padding: 10px; background: #fff; text-align: center; border-bottom: 2px solid #e9e9e9; }
+        #logo-container img { display: block; margin: 0 auto }
 
 
 /*  BANNER  */
